<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />


        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />


            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_qty"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_qty"
                android:inputType="number" />


            <EditText
                android:id="@+id/edit_supp_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/unit_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supp_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/unit_supplier_number"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>



